--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
+* {
+   margin: 0;
+   padding: 0;
+   list-style: none;
+   text-decoration: none;
+ }
+
 
 #container{
   width: 84%;
@@ -16,10 +23,10 @@ header {
 
   header h1{
     position: absolute;
-    top: 3rem;
-    left: 3rem;
-    font-size: 2rem;
-    color: white;
+    top: 5rem;
+    left: 1rem;
+    font-size:2rem;
+    color: rgb(214, 122, 127);
   }
 
 nav {
@@ -42,11 +49,11 @@ nav {
 
 main{
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
 }
 
   section{
-    flex: 3;
+    flex: 5;
     padding: 3rem;
     background: yellow;
   }
@@ -57,6 +64,11 @@ main{
       margin-bottom: 2rem;
       background: #FFF;
     }
+
+    article img{
+        width:43%;     /* 親要素の 50%幅になります */
+    }
+
 
   aside{
     flex: 1;
